--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,29 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting webdriver\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Could not find a version that satisfies the requirement webdriver (from versions: )\n",
+      "No matching distribution found for webdriver\n",
+      "You are using pip version 9.0.3, however version 10.0.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting Browser\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Could not find a version that satisfies the requirement Browser (from versions: )\n",
+      "No matching distribution found for Browser\n",
+      "You are using pip version 9.0.3, however version 10.0.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install webdriver\n",
+    "! pip install Browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selenium'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-68-a96b6e6686b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mbs4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msplinter\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBrowser\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
+     ]
+    }
+   ],
    "source": [
     "# Import dependencies, BS4, splinter etc\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "#from selenium import webdriver\n",
+    "from selenium import webdriver\n",
     "import time\n",
-    "#from splinter import Browser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#executable_path = {\"executable_path\": \"/usr/local/bin/chromedriver\"}\n",
-    "#browser = Browser(\"chrome\", **executable_path, headless=False)"
+    "from splinter import Browser"
    ]
   },
   {
@@ -936,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -951,61 +996,70 @@
     "# Find desired elements\n",
     "#news_title = soup.title\n",
     "#print(news_title)\n",
-    "news_paragraph = soup.p\n",
-    "print(news_paragraph)"
+    "#news_paragraph = soup.p\n",
+    "#print(news_paragraph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<div class=\"content_title\">\n",
+      "<div class=\"content_title\">\n",
       "<a href=\"/news/8326/nasa-invests-in-visionary-technology/\">\n",
       "NASA Invests in Visionary Technology \n",
       "</a>\n",
-      "</div>, <div class=\"content_title\">\n",
-      "<a href=\"/news/8325/nasa-is-ready-to-study-the-heart-of-mars/\">\n",
-      "NASA is Ready to Study the Heart of Mars\n",
-      "</a>\n",
-      "</div>, <div class=\"content_title\">\n",
-      "<a href=\"/news/8322/nasa-briefing-on-first-mission-to-study-mars-interior/\">\n",
-      "NASA Briefing on First Mission to Study Mars Interior\n",
-      "</a>\n",
-      "</div>, <div class=\"content_title\">\n",
-      "<a href=\"/news/8321/new-ar-mobile-app-features-3-d-nasa-spacecraft/\">\n",
-      "New 'AR' Mobile App Features 3-D NASA Spacecraft\n",
-      "</a>\n",
-      "</div>, <div class=\"content_title\">\n",
-      "<a href=\"/news/8317/witness-first-mars-launch-from-west-coast/\">\n",
-      "Witness First Mars Launch from West Coast\n",
-      "</a>\n",
-      "</div>, <div class=\"content_title\">\n",
-      "<a href=\"/news/8315/nasa-insight-mission-to-mars-arrives-at-launch-site/\">\n",
-      "NASA InSight Mission to Mars Arrives at Launch Site\n",
-      "</a>\n",
-      "</div>]\n"
+      "</div>\n"
      ]
     }
    ],
    "source": [
-    "# results are returned as an iterable list\n",
-    "results = soup.find_all(class_=\"content_title\")\n",
-    "print(results)"
+    "# Find the content_title class, which contains the titles of the news articles; returns a list\n",
+    "news_titles = soup.find(class_=\"content_title\")\n",
+    "print(news_titles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "news_paragraph = soup.find(news_titles.next_sibling)\n",
+    "print(news_paragraph)\n",
+    "# This is the next sibling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# results2 = soup.find_all(class_=\"article_teaser_body\")\n",
+    "# print(results2)\n",
+    "# Why is this an empty list?"
+   ]
   },
   {
    "cell_type": "code",
@@ -1016,8 +1070,24 @@
    "outputs": [],
    "source": [
     "########################### JPL MARS SPACE IMAGES - FEATURED IMAGE ###########################\n",
+    "\n",
     "# Use splinter to navigate the site and find the image url for current featured mars image\n",
-    "featured_img_url = "
+    "\n",
+    "\n",
+    "def init_browser():\n",
+    "    # @NOTE: Replace the path with your actual path to the chromedriver\n",
+    "    # TODO: make sure to add your driver here     \n",
+    "    executable_path = {\"executable_path\": r\"C:/chromedriver.exe\"}\n",
+    "    return Browser(\"chrome\", **executable_path, headless=False)\n",
+    "\n",
+    "\n",
+    "#def init_browser():\n",
+    "    # @NOTE: Replace the path with your actual path to the chromedriver\n",
+    "    #executable_path = {\"executable_path\": r\"C:\\Users\\yod\\Desktop\\UNCCHAR201802DATA2-Class-Repository-DATA\\mission-to-mars-wk13hw\"}\n",
+    "    #return Browser(\"chrome\", **executable_path, headless=False)\n",
+    "\n",
+    "\n",
+    "#featured_img_url = \"https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\""
    ]
   },
   {
